@@ -9,6 +9,8 @@
 	* Add methods find_MIDfromReturnPath and find_XTypo3MID in mod/class.readmail.php (pending removal from t3lib/class.t3lib_readmail.php)
 	* Update to manual and contextual help.
 	* Add simulated conversion of records, until conversion is explicitly confirmed.
+	* Stop reporting each converted record after the 50th converted record in a table.
+	* Stop reporting each not-converted record after the 50th not-converted record in a table.
 
 2007-03-04 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Add copy of the static templates in the manual.
